--- a/Packages/de.vacuumbreather.caliburn.noesis/package.json
+++ b/Packages/de.vacuumbreather.caliburn.noesis/package.json
@@ -17,6 +17,7 @@
     "url": "https://www.vacuumbreather.de"
   },
   "dependencies": {
-    "com.noesis.noesisgui": "3.2.6"
+    "com.noesis.noesisgui": "3.2.6",
+    "com.cysharp.unitask" : "2.5.10"
   }
 }
