--- a/Assets/Caliburn.Noesis/package.json
+++ b/Assets/Caliburn.Noesis/package.json
@@ -17,5 +17,12 @@
   "dependencies": {
     "com.noesis.noesisgui": "3.2.6",
     "com.cysharp.unitask" : "2.5.10"
-  }
+  },
+  "samples": [
+      {
+          "displayName": "Test Sample",
+          "description": "Testing how samples work",
+          "path": "Samples~/EarlySample"
+      }
+  ]
 }
